[gd_scene load_steps=16 format=3 uid="uid://b0u7g1u7l6l8f"]

[ext_resource type="Texture2D" uid="uid://cxrkms8au3bk1" path="res://assets/options/tloopcji.png" id="1_ibgq5"]
[ext_resource type="Script" path="res://scripts/options.gd" id="1_u6y58"]
[ext_resource type="Texture2D" uid="uid://db1ai52cy2dlx" path="res://assets/options/opcjtitle.png" id="3_o0mhb"]
[ext_resource type="Texture2D" uid="uid://co25lm3cwm0cc" path="res://assets/options/1.png" id="4_263qs"]
[ext_resource type="Texture2D" uid="uid://cn3v3q5u42ace" path="res://assets/title/trybobrot.png" id="5_5hjg3"]
[ext_resource type="PackedScene" uid="uid://cvl4jjtbik2e0" path="res://scenes/rotating.tscn" id="5_vnhik"]
[ext_resource type="Texture2D" uid="uid://dg3f0ejs6loik" path="res://assets/options/buton.png" id="6_7skrt"]
[ext_resource type="Texture2D" uid="uid://dvpwqhp6x0fuc" path="res://assets/options/2.png" id="7_6j65c"]
[ext_resource type="Texture2D" uid="uid://cw1p8iugmqxpt" path="res://assets/options/menu.png" id="8_aq55v"]
[ext_resource type="Texture2D" uid="uid://bjrp3nocbstqd" path="res://assets/options/menuhover.png" id="9_dbkk0"]
[ext_resource type="Texture2D" uid="uid://vo0i530j36bc" path="res://assets/options/ekranyes.png" id="9_u3oyo"]
[ext_resource type="Texture2D" uid="uid://bu4xftymupgon" path="res://assets/options/accept.png" id="10_dbknj"]
[ext_resource type="Texture2D" uid="uid://cafo0cthayw4q" path="res://assets/options/Zas√≥b 6.png" id="11_oldn8"]

[sub_resource type="Animation" id="Animation_qoxav"]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ev00"]
_data = {
"fade_out": SubResource("Animation_qoxav")
}

[node name="Options" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_u6y58")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -4.0
offset_right = 99.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ibgq5")

[node name="Title" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -411.0
offset_top = 22.0
offset_right = 411.0
offset_bottom = 421.0
grow_horizontal = 2
texture = ExtResource("3_o0mhb")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -114.0
offset_right = -133.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_263qs")

[node name="Rotating" parent="Control/TextureRect" instance=ExtResource("5_vnhik")]
position = Vector2(149, 180)
scale = Vector2(0.41991, 0.41991)
in_range = true

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -114.0
offset_right = 221.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_7skrt")

[node name="TextureRect3" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 275.0
offset_top = -116.0
offset_right = 566.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_6j65c")

[node name="FullscreenButton" type="TextureButton" parent="Control/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -55.5
offset_right = 42.5
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_pressed = ExtResource("9_u3oyo")

[node name="TrybMenu" type="Sprite2D" parent="Control"]
position = Vector2(251, 835)
scale = Vector2(0.917391, 0.917391)
texture = ExtResource("5_5hjg3")

[node name="MenuButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 229.0
offset_top = 809.0
offset_right = 542.0
offset_bottom = 1007.0
texture_normal = ExtResource("8_aq55v")
texture_hover = ExtResource("9_dbkk0")

[node name="TrybAccept" type="Sprite2D" parent="Control"]
position = Vector2(1750, 832)
scale = Vector2(0.913043, 0.913043)
texture = ExtResource("5_5hjg3")

[node name="AcceptButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1457.0
offset_top = 810.0
offset_right = 1771.0
offset_bottom = 1008.0
texture_normal = ExtResource("11_oldn8")
texture_hover = ExtResource("10_dbknj")

[node name="Fade" type="ColorRect" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ev00")
}

[connection signal="toggled" from="Control/TextureRect3/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="mouse_entered" from="Control/MenuButton" to="." method="_on_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/MenuButton" to="." method="_on_menu_button_mouse_exited"]
[connection signal="pressed" from="Control/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="mouse_entered" from="Control/AcceptButton" to="." method="_on_accept_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/AcceptButton" to="." method="_on_accept_button_mouse_exited"]
[connection signal="pressed" from="Control/AcceptButton" to="." method="_on_accept_button_pressed"]
